--- a/css/user-style.css
+++ b/css/user-style.css
@@ -1,3 +1,19 @@
+/* TODO no idea why if following selector with css, is exported it not works */
+.header {
+    margin-left: 10%;
+}
+
+.user-info-text {
+    font-family: Arial, Verdana, Helvetica, sans-serif;
+    font-size: medium;
+    font-weight: bold;
+    font-style: normal;
+    color: #000000;
+    /* text-decoration: none; */
+    line-height: normal;
+
+    font-size: 1.25rem;
+}
 
 p {
     font-family: Arial, Verdana, Helvetica, sans-serif;
