--- a/css/index.css
+++ b/css/index.css
@@ -51,16 +51,11 @@ h2{
     color: #ffffff;
     font-size: 16px;
     width: 25%;
+    min-width: 170px;
     font-family: Helvetica, Sans-Serif; 
 }
  
- 
-@media (max-width: 600px) {
- 
-    #signUp, #logIn {
-        width: 125px;
-    }
-}
+
  
 button:hover:before {
    transition: 0.8s;
@@ -108,7 +103,7 @@ button:focus {
     color:#3D5E38;
 }
   
-[id^="modal"] input[type=submit] {
+input[type=submit] {
     width: 70%;
     display: block;
     margin: 0px;
@@ -118,7 +113,7 @@ button:focus {
   
 }
   
-[id^="modal"] input[type=text], input[type=password]  {
+input[type=text], input[type=password]  {
     height: 44px;
     font-size: 16px;
     width: 100%; color: black;
@@ -129,7 +124,7 @@ button:focus {
     padding: 0 8px;
 }
   
-[id^="modal"] input[type=text]:hover, input[type=password]:hover {
+input[type=text]:hover, input[type=password]:hover {
     border: 1px solid #336600;
     box-shadow: 1px 1px  green;
 }
@@ -177,4 +172,40 @@ label {
 }
 .Err{
     color: red;
+}
+@media only screen and (max-width: 600px) {
+    h1 {
+
+        font-weight: 400;
+        font-size: larger;
+    }
+     
+    h2{
+        font-weight: 200;
+        font-size: large;
+    }
+    .logo-image{
+        position: fixed;
+        left: 50%;
+        height: 50%;
+        transform: translate(-50%, -90%);
+    }
+    #signUp, #logIn {
+        width: 165px;
+    }
+    .submit-button {
+        border: 0px; text-align: center;
+        color: #fff;
+        padding: 10px 10px; 
+        font-size: 12px;
+        min-width: 140px;
+    }
+    input[type=text], input[type=password]  {
+        height: 30px;
+        font-size: 12px;
+        padding: 0 5px;
+    }
+    .close {
+        font-size: 11px;
+    }
 }
