--- a/css/registration.css
+++ b/css/registration.css
@@ -1,6 +1,6 @@
 html, body {
-    overflow-x: hidden;  /*disables horizontal scrolling */
-    margin: 0; overflow-y: hidden;
+    /*overflow-x: hidden;  /*disables horizontal scrolling */
+    margin: 0; /*overflow-y: hidden;*/
     padding: 0;
 
 }
@@ -92,6 +92,7 @@ input[type=text], input[type=password] {
     height: 35px;        /*design of input fields (name and password) */
     font-size: 16px;
     width: 20%;
+    min-width: 100px;
     color: white;
     margin-bottom: 10px;
     margin-left: 10px;
@@ -111,6 +112,7 @@ select {
     height: 35px;        /*design of input fields (name and password) */
     font-size: 16px;
     width: 8%;
+    min-width: 50px;
     color: white;
     margin-bottom: 10px;
     margin: auto;
@@ -122,9 +124,11 @@ select {
 }
 select[name="speciality"]{
   width: 30%;
+  min-width: 200px;
 }
 select[name="degree"]{
   width: 30%;
+  min-width: 200px;
 
 }
     
@@ -192,4 +196,42 @@ label{
 
 #profilepic{
     width: 8rem;
+}
+
+@media only screen and (max-width: 670px) {
+    #main-information {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .next {
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-size: 12px;
+        font-weight: 600;
+        min-width: 100px;
+    }
+    select {
+        height: 25px;       
+        font-size: 12px;
+        min-width: 45px;
+        padding: 0 6px;
+    }
+    select[name="speciality"]{
+      min-width: 150px;
+    }
+    select[name="degree"]{
+      min-width: 150px;
+    
+    }
+    input[type=text]{
+        height: 25px;        /*design of input fields (name and password) */
+        font-size: 12px;
+        min-width: 150px;
+        padding: 0 6px;
+    }
+    h1 {
+        font-weight: 500;
+        font-size: medium;
+      }
 }
