--- a/css/user-style.css
+++ b/css/user-style.css
@@ -22,7 +22,7 @@ p {
     font-style: normal;
     color: #000000;
     /* text-decoration: none; */
-    line-height: normal;
+    /* line-height: normal; */
 
     font-size: 1.25rem;
 }
@@ -71,9 +71,9 @@ p {
 .room {
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
+    padding: 10px;
     font-size: 30px;
-    text-align: center;
+    /* text-align: center; */
 
     margin: 5px;
     height: 70px;
