--- a/css/popup-form-style.css
+++ b/css/popup-form-style.css
@@ -10,29 +10,24 @@
 .form-popup {
     /* height: 50vh; */
     display: none;
-    position: fixed;
-    bottom: 0;
-    right: 15px;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-
-    right: 35%;
-    bottom: 13%;
-}
-
-/* Add styles to the form container */
-.form-container {
-    max-width: 300px;
+    min-width: 300px;
+    max-width: 450px;
     padding: 10px;
     background-color: white;
+    position: fixed;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
 }
 
-.form-container h1 {
+.form-popup h1 {
     text-align: center;
 }
 
 /* Full-width input fields */
-.form-container .dropdown-meet-type {
+.form-popup .dropdown-meet-type {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -41,13 +36,13 @@
 }
 
 /* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+.form-popup input[type=text]:focus, .form-popup input[type=password]:focus {
     background-color: #ddd;
     outline: none;
 }
 
 /* Set a style for the submit/login button */
-.form-container .btn {
+.form-popup .btn {
     background-color: #4CAF50;
     color: white;
     padding: 16px 20px;
@@ -59,11 +54,11 @@
 }
 
 /* Add a red background color to the cancel button */
-.form-container .cancel {
+.form-popup .cancel {
 background-color: red;
 }
 
 /* Add some hover effects to buttons */
-.form-container .btn:hover {
+.form-popup .btn:hover {
 opacity: 1;
 }
