--- a/css/popup-form-style.css
+++ b/css/popup-form-style.css
@@ -13,9 +13,11 @@
     min-width: 300px;
     max-width: 450px;
     padding: 10px;
+    box-shadow: 10px, 16px, rgb(22, 22, 22);
     background-color: white;
     position: fixed;
     border: 3px solid #f1f1f1;
+    box-shadow: 4px 4px 8px black;
     z-index: 9;
     top: 50%;
     left: 50%;
