--- a/css/user-style.css
+++ b/css/user-style.css
@@ -95,13 +95,21 @@ p {
     background-color:#4daf7c;
     cursor: pointer;
 }
-
 #room-title{
     margin: 0;
     text-align: center;
     font-size: 20px;
     font-weight: 900;
 }
+
+#registrated{
+    color:#019601;
+    text-align: right;
+    margin:0;
+    margin-top: -20px;
+    font-weight: 800;
+} 
+
 #room-subject, #room-place, #room-time, #room-date{
     margin: 0;
 
