--- a/css/user-style.css
+++ b/css/user-style.css
@@ -29,16 +29,21 @@ p {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+}
+
+#su-logo{
+    margin-left: 20%;
 }
 
 .welcome-message {
     font-weight: normal;
     font-size: 1.25rem;
+    margin-top: 20px;
 }
 
 .main-content {
-    margin: 1rem 10rem ;
+    margin: 0rem 10rem ;
 
     min-width: 250px;
 }
@@ -68,6 +73,114 @@ p {
     padding: 10px;
     width: 90%;
     min-height: 350px;
+}
+.room-information{
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    padding: 20px;
+    background-color: #4daf7c;
+    min-height:480px;
+}
+#room_name, #room_subject {
+    margin: 3px;
+}
+
+#timer-section{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    width: 35%;
+    height: 450px;
+}
+
+#timer-circle{
+    display: flex;
+    flex-direction: column;
+    
+    justify-content: center;
+    align-items: center; 
+    background: lightblue;
+    border-radius: 50%;
+    border: 24px solid #24533b;
+    -moz-box-shadow: 1px 0px 21px #000000;
+    -webkit-box-shadow: 1px 0px 21px #000000;
+    box-shadow: 1px 0px 21px #000000;
+
+    width: 280px;
+    height: 280px;
+
+}
+
+#timer{
+    font-size: 70px;
+    font-weight: bolder;
+    margin: 0;
+    margin-bottom: 30px;
+    color: #11251b;
+
+}
+#timer-title{
+    font-weight: 600;
+    color: #11251b;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+#queue, #room-message{
+    width: 25%;
+    height: 450px;
+    margin-left: 5%;
+    margin-top: -10px;
+}
+
+
+#message-box{
+    width: 100%;
+    height: 80%;
+    background-color: lightblue;
+    border-radius: 3%;
+    padding: 10px;
+    -moz-box-shadow: 1px 0px 21px #000000;
+    -webkit-box-shadow: 1px 0px 21px #000000;
+    box-shadow: 1px 0px 21px #000000;
+}
+
+.section-title{
+    font-size: 25px;
+    font-weight: 600;
+    color: #24533b ;
+}
+
+.queue-element{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 15%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background: lightblue;
+    border: 2px solid #24533b;
+    -moz-box-shadow: 1px 0px 21px #000000;
+    -webkit-box-shadow: 1px 0px 21px #000000;
+    box-shadow: 1px 0px 21px #000000
+}
+
+.user-image{
+    height: 100%;
+    width: 70px;
+}
+
+.name{
+    margin: 5px;
+    color: #11251b;
+}
+.number{
+    margin: auto;
+    margin-right: 10px;
+    font-weight: 900;
+    font-size: 1.7rem;
+    color: rgb(2, 160, 2);
 }
 
 .room {
