Now pop runs 60sec timer with opportunity to accept or deny invitation. Reponse is sent to all teachers

--- a/css/user-style.css
+++ b/css/user-style.css
@@ -97,7 +97,7 @@ p {
     height: 450px;
 }
 
-#timer-circle{
+#timer-circle, #invitation-timer-circle {
     display: flex;
     flex-direction: column;
     
@@ -115,7 +115,8 @@ p {
 
 }
 
-#timer{
+/* TODO maybe use class */
+#timer, #invitation-timer {
     font-size: 70px;
     font-weight: bolder;
     margin: 0;
@@ -123,7 +124,9 @@ p {
     color: #11251b;
 
 }
-#timer-title{
+
+/* TODO maybe use class */
+#timer-title, #invitation-timer-title {
     font-weight: 600;
     color: #11251b;
     margin: 0;
