Now when Student accept invitation then he is removed from meet_record table. (TODO redirect teacher and student to link if online AND Rename the invitation pop up buttons)

--- a/css/waiting-room-style.css
+++ b/css/waiting-room-style.css
@@ -7,9 +7,9 @@
     height: 450px;
 }
 
-.current-student-info {
+/* .current-student-info {
     display: None;
-}
+} */
 
 #welcome-student-button {
     display: None;
