--- a/css/user-style.css
+++ b/css/user-style.css
@@ -100,7 +100,7 @@ p {
 #timer-circle, #invitation-timer-circle {
     display: flex;
     flex-direction: column;
-    
+    margin: auto;
     justify-content: center;
     align-items: center; 
     background: lightblue;
