--- a/css/user-style.css
+++ b/css/user-style.css
@@ -144,12 +144,55 @@ p {
 #message-box{
     width: 100%;
     height: 80%;
+    min-height: 100px;
     background-color: lightblue;
     border-radius: 3%;
     padding: 10px;
+    font-size: 1.3rem;
+    font-weight: 700;
+    color: #24533b;
     -moz-box-shadow: 1px 0px 21px #000000;
     -webkit-box-shadow: 1px 0px 21px #000000;
     box-shadow: 1px 0px 21px #000000;
+}
+
+#pause-field{
+    margin-top: 20px;
+    background-color: lightblue;
+    border-radius: 3%;
+    width: 50%;
+    padding: 3px;
+    padding-left: 10px;
+    font-size: medium;
+    font-weight: 700;
+    -moz-box-shadow: 1px 0px 21px #000000;
+    -webkit-box-shadow: 1px 0px 21px #000000;
+    box-shadow: 1px 0px 21px #000000;
+}
+
+#message-submit{
+    border: 0px; 
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-color: #3c835e;
+    padding: 10px 10px; 
+    margin-top: 2rem ;
+    font-size: 14px;
+    -moz-box-shadow: 1px 0px 15px #000000;
+    -webkit-box-shadow: 1px 0px 15px #000000;
+    box-shadow: 1px 0px 16px #000000;
+}
+
+#message-submit:hover{
+    background-color: #24533b;
+    cursor: pointer;
+}
+
+#pause-label{
+    font-size: large;
+    font-weight: 800;
+    color: #11251b;
 }
 
 .section-title{
@@ -251,4 +294,47 @@ p {
 
 .center {
     text-align: center;
+}
+
+@media only screen and (max-width: 1300px) {
+
+    .main-content {
+        margin: 0rem;
+    }
+
+    .room-information{
+        width: 100%;
+        margin: 20px;
+        padding: 10px;
+    }
+    #timer-circle, #invitation-timer-circle {  
+        width: 230px;
+        height: 230px;
+    }
+}
+@media only screen and (max-width: 850px) {
+
+    .main-content {
+        margin: 1rem 0rem;
+    }
+
+    .room-information{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 85%;
+        margin: 20px;
+    }
+
+    #queue, #room-message{
+        justify-content: center;
+        width: 80%;
+        height: 450px;
+    }
+    #su-logo{
+        width: 120px;
+        height: 40px;
+        margin-left: 20%;
+    }
+
 }
