--- a/css/waiting-room-style.css
+++ b/css/waiting-room-style.css
@@ -31,3 +31,11 @@
     background: #8aa6c5;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 850px) {
+    #waiting-room-current-state { 
+        width: 100%;
+        height: 260px;
+    }
+    
+}
