--- a/css/waiting-room-style.css
+++ b/css/waiting-room-style.css
@@ -31,8 +31,13 @@
     background: #8aa6c5;
     cursor: pointer;
 }
-
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 1200px) {
+    #waiting-room-current-state { 
+        width: 30%;
+    }
+    
+}
+@media only screen and (max-width: 1050px) {
     #waiting-room-current-state { 
         width: 100%;
         height: 260px;
