--- a/css/waiting-room-style.css
+++ b/css/waiting-room-style.css
@@ -3,13 +3,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    width: 35%;
+    width: 30%;
     height: 450px;
 }
 
 /* .current-student-info {
     display: None;
 } */
+
+#queue{
+    width: 30%;
+    height: 450px;
+    margin-left: 5%;
+    margin-top: -10px;
+}
 
 #welcome-student-button {
     display: None;
@@ -33,7 +40,7 @@
 }
 @media only screen and (max-width: 1200px) {
     #waiting-room-current-state { 
-        width: 30%;
+        width: 23%;
     }
     
 }
@@ -41,6 +48,9 @@
     #waiting-room-current-state { 
         width: 100%;
         height: 260px;
+    }
+    #queue{
+        width: 90%;
     }
     
 }
